@@ -16,6 +16,10 @@
  */
 package org.apache.solr.client.solrj.impl;
 
+import static org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteExecutionException;
+import static org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteSolrException;
+import static org.apache.solr.common.util.Utils.getObjectByPath;
+
 import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
 import java.io.IOException;
@@ -25,14 +29,15 @@ import java.lang.reflect.InvocationTargetException;
 import java.net.ConnectException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -43,8 +48,7 @@ import java.util.concurrent.Phaser;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-
-import org.apache.http.HttpStatus;
+import java.util.stream.Collectors;
 import org.apache.http.entity.ContentType;
 import org.apache.solr.client.solrj.ResponseParser;
 import org.apache.solr.client.solrj.SolrClient;
@@ -55,10 +59,9 @@ import org.apache.solr.client.solrj.embedded.SSLConfig;
 import org.apache.solr.client.solrj.request.RequestWriter;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.client.solrj.request.V2Request;
+import org.apache.solr.client.solrj.util.AsyncListener;
 import org.apache.solr.client.solrj.util.Cancellable;
 import org.apache.solr.client.solrj.util.ClientUtils;
-import org.apache.solr.client.solrj.util.Constants;
-import org.apache.solr.client.solrj.util.AsyncListener;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.StringUtils;
 import org.apache.solr.common.params.CommonParams;
@@ -74,10 +77,11 @@ import org.apache.solr.common.util.Utils;
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.HttpClientTransport;
 import org.eclipse.jetty.client.ProtocolHandlers;
+import org.eclipse.jetty.client.api.AuthenticationStore;
 import org.eclipse.jetty.client.api.Request;
 import org.eclipse.jetty.client.api.Response;
 import org.eclipse.jetty.client.http.HttpClientTransportOverHTTP;
-import org.eclipse.jetty.client.util.BytesContentProvider;
+import org.eclipse.jetty.client.util.ByteBufferContentProvider;
 import org.eclipse.jetty.client.util.FormContentProvider;
 import org.eclipse.jetty.client.util.InputStreamContentProvider;
 import org.eclipse.jetty.client.util.InputStreamResponseListener;
@@ -88,26 +92,28 @@ import org.eclipse.jetty.http.HttpField;
 import org.eclipse.jetty.http.HttpFields;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpMethod;
+import org.eclipse.jetty.http.HttpStatus;
+import org.eclipse.jetty.http.MimeTypes;
 import org.eclipse.jetty.http2.client.HTTP2Client;
 import org.eclipse.jetty.http2.client.http.HttpClientTransportOverHTTP2;
+import org.eclipse.jetty.io.ClientConnector;
 import org.eclipse.jetty.util.BlockingArrayQueue;
 import org.eclipse.jetty.util.Fields;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteSolrException;
-import static org.apache.solr.client.solrj.impl.BaseHttpSolrClient.RemoteExecutionException;
-import static org.apache.solr.common.util.Utils.getObjectByPath;
-
 /**
  * Difference between this {@link Http2SolrClient} and {@link HttpSolrClient}:
+ *
  * <ul>
- *  <li>{@link Http2SolrClient} sends requests in HTTP/2</li>
- *  <li>{@link Http2SolrClient} can point to multiple urls</li>
- *  <li>{@link Http2SolrClient} does not expose its internal httpClient like {@link HttpSolrClient#getHttpClient()},
- * sharing connection pools should be done by {@link Http2SolrClient.Builder#withHttpClient(Http2SolrClient)} </li>
+ *   <li>{@link Http2SolrClient} sends requests in HTTP/2
+ *   <li>{@link Http2SolrClient} can point to multiple urls
+ *   <li>{@link Http2SolrClient} does not expose its internal httpClient like {@link
+ *       HttpSolrClient#getHttpClient()}, sharing connection pools should be done by {@link
+ *       Http2SolrClient.Builder#withHttpClient(Http2SolrClient)}
  * </ul>
+ *
  * @lucene.experimental
  */
 public class Http2SolrClient extends SolrClient {
@@ -122,25 +128,26 @@ public class Http2SolrClient extends SolrClient {
   private static final List<String> errPath = Arrays.asList("metadata", "error-class");
 
   private HttpClient httpClient;
-  private volatile Set<String> queryParams = Collections.emptySet();
+  private volatile Set<String> urlParamNames = Set.of();
   private int idleTimeout;
+  private int requestTimeout;
 
-  private ResponseParser parser = new BinaryResponseParser();
-  private volatile RequestWriter requestWriter = new BinaryRequestWriter();
-  private List<HttpListenerFactory> listenerFactory = new LinkedList<>();
+  protected ResponseParser parser = new BinaryResponseParser();
+  protected RequestWriter requestWriter = new BinaryRequestWriter();
+  private List<HttpListenerFactory> listenerFactory = new ArrayList<>();
   private AsyncTracker asyncTracker = new AsyncTracker();
-  /**
-   * The URL of the Solr server.
-   */
+  /** The URL of the Solr server. */
   private String serverBaseUrl;
+
   private boolean closeClient;
   private ExecutorService executor;
   private boolean shutdownExecutor;
 
   private final String basicAuthAuthorizationStr;
+  private AuthenticationStoreHolder authenticationStore;
 
   protected Http2SolrClient(String serverBaseUrl, Builder builder) {
-    if (serverBaseUrl != null)  {
+    if (serverBaseUrl != null) {
       if (!serverBaseUrl.equals("/") && serverBaseUrl.endsWith("/")) {
         serverBaseUrl = serverBaseUrl.substring(0, serverBaseUrl.length() - 1);
       }
@@ -161,10 +168,25 @@ public class Http2SolrClient extends SolrClient {
       httpClient = builder.http2SolrClient.httpClient;
     }
     if (builder.basicAuthUser != null && builder.basicAuthPassword != null) {
-      basicAuthAuthorizationStr = basicAuthCredentialsToAuthorizationString(builder.basicAuthUser, builder.basicAuthPassword);
+      basicAuthAuthorizationStr =
+          basicAuthCredentialsToAuthorizationString(
+              builder.basicAuthUser, builder.basicAuthPassword);
     } else {
       basicAuthAuthorizationStr = null;
     }
+    if (builder.requestWriter != null) {
+      requestWriter = builder.requestWriter;
+    }
+    if (builder.responseParser != null) {
+      parser = builder.responseParser;
+    }
+    if (builder.requestTimeout == null) {
+      requestTimeout = -1;
+    } else {
+      requestTimeout = builder.requestTimeout;
+    }
+    httpClient.setFollowRedirects(builder.followRedirects);
+    this.urlParamNames = builder.urlParamNames;
     assert ObjectReleaseTracker.track(this);
   }
 
@@ -185,42 +207,55 @@ public class Http2SolrClient extends SolrClient {
   private HttpClient createHttpClient(Builder builder) {
     HttpClient httpClient;
 
-    BlockingArrayQueue<Runnable> queue = new BlockingArrayQueue<>(256, 256);
     executor = builder.executor;
     if (executor == null) {
-      this.executor = new ExecutorUtil.MDCAwareThreadPoolExecutor(32,
-          256, 60, TimeUnit.SECONDS, queue, new SolrNamedThreadFactory("h2sc"));
+      BlockingArrayQueue<Runnable> queue = new BlockingArrayQueue<>(256, 256);
+      this.executor =
+          new ExecutorUtil.MDCAwareThreadPoolExecutor(
+              32, 256, 60, TimeUnit.SECONDS, queue, new SolrNamedThreadFactory("h2sc"));
       shutdownExecutor = true;
     } else {
       shutdownExecutor = false;
     }
 
     SslContextFactory.Client sslContextFactory;
-    boolean ssl;
+    boolean sslEnabled;
     if (builder.sslConfig == null) {
-      sslContextFactory = getDefaultSslContextFactory();
-      ssl = sslContextFactory.getTrustStore() != null || sslContextFactory.getTrustStorePath() != null;
+      sslEnabled =
+          System.getProperty("javax.net.ssl.keyStore") != null
+              || System.getProperty("javax.net.ssl.trustStore") != null;
+      sslContextFactory = sslEnabled ? getDefaultSslContextFactory() : null;
     } else {
       sslContextFactory = builder.sslConfig.createClientContextFactory();
-      ssl = true;
+      sslEnabled = true;
     }
 
-    boolean sslOnJava8OrLower = ssl && !Constants.JRE_IS_MINIMUM_JAVA9;
     HttpClientTransport transport;
-    if (builder.useHttp1_1 || sslOnJava8OrLower) {
-      if (sslOnJava8OrLower && !builder.useHttp1_1) {
-        log.warn("Create Http2SolrClient with HTTP/1.1 transport since Java 8 or lower versions does not support SSL + HTTP/2");
-      } else {
+    if (builder.useHttp1_1) {
+      if (log.isDebugEnabled()) {
         log.debug("Create Http2SolrClient with HTTP/1.1 transport");
       }
-      transport = new HttpClientTransportOverHTTP(2);
-      httpClient = new HttpClient(transport, sslContextFactory);
-      if (builder.maxConnectionsPerHost != null) httpClient.setMaxConnectionsPerDestination(builder.maxConnectionsPerHost);
+
+      ClientConnector clientConnector = new ClientConnector();
+      clientConnector.setReuseAddress(true);
+      clientConnector.setSslContextFactory(sslContextFactory);
+      clientConnector.setSelectors(2);
+      transport = new HttpClientTransportOverHTTP(clientConnector);
+
+      httpClient = new HttpClient(transport);
+
+      if (builder.maxConnectionsPerHost != null)
+        httpClient.setMaxConnectionsPerDestination(builder.maxConnectionsPerHost);
     } else {
       log.debug("Create Http2SolrClient with HTTP/2 transport");
-      HTTP2Client http2client = new HTTP2Client();
+      ClientConnector clientConnector = new ClientConnector();
+      clientConnector.setReuseAddress(true);
+      clientConnector.setSslContextFactory(sslContextFactory);
+      clientConnector.setSelectors(2);
+
+      HTTP2Client http2client = new HTTP2Client(clientConnector);
       transport = new HttpClientTransportOverHTTP2(http2client);
-      httpClient = new HttpClient(transport, sslContextFactory);
+      httpClient = new HttpClient(transport);
       httpClient.setMaxConnectionsPerDestination(4);
     }
 
@@ -228,36 +263,48 @@ public class Http2SolrClient extends SolrClient {
     httpClient.setStrictEventOrdering(false);
     httpClient.setConnectBlocking(true);
     httpClient.setFollowRedirects(false);
-    httpClient.setMaxRequestsQueuedPerDestination(asyncTracker.getMaxRequestsQueuedPerDestination());
+    httpClient.setMaxRequestsQueuedPerDestination(
+        asyncTracker.getMaxRequestsQueuedPerDestination());
     httpClient.setUserAgentField(new HttpField(HttpHeader.USER_AGENT, AGENT));
-
     httpClient.setIdleTimeout(idleTimeout);
+
+    this.authenticationStore = new AuthenticationStoreHolder();
+    httpClient.setAuthenticationStore(this.authenticationStore);
+
     if (builder.connectionTimeout != null) httpClient.setConnectTimeout(builder.connectionTimeout);
+
     try {
       httpClient.start();
     } catch (Exception e) {
+      close(); // make sure we clean up
       throw new RuntimeException(e);
     }
 
     return httpClient;
   }
 
+  @Override
   public void close() {
     // we wait for async requests, so far devs don't want to give sugar for this
     asyncTracker.waitForComplete();
-    if (closeClient) {
-      try {
-        httpClient.setStopTimeout(1000);
+    try {
+      if (closeClient) {
         httpClient.stop();
-      } catch (Exception e) {
-        throw new RuntimeException("Exception on closing client", e);
+        httpClient.destroy();
       }
-    }
-    if (shutdownExecutor) {
-      ExecutorUtil.shutdownAndAwaitTermination(executor);
+    } catch (Exception e) {
+      throw new RuntimeException("Exception on closing client", e);
+    } finally {
+      if (shutdownExecutor) {
+        ExecutorUtil.shutdownAndAwaitTermination(executor);
+      }
     }
 
     assert ObjectReleaseTracker.release(this);
+  }
+
+  public void setAuthenticationStore(AuthenticationStore authenticationStore) {
+    this.authenticationStore.updateAuthenticationStore(authenticationStore);
   }
 
   public boolean isV2ApiRequest(final SolrRequest<?> request) {
@@ -268,15 +315,19 @@ public class Http2SolrClient extends SolrClient {
     return idleTimeout;
   }
 
-  public static class OutStream implements Closeable{
+  public static class OutStream implements Closeable {
     private final String origCollection;
     private final ModifiableSolrParams origParams;
     private final OutputStreamContentProvider outProvider;
     private final InputStreamResponseListener responseListener;
     private final boolean isXml;
 
-    public OutStream(String origCollection, ModifiableSolrParams origParams,
-                     OutputStreamContentProvider outProvider, InputStreamResponseListener responseListener, boolean isXml) {
+    public OutStream(
+        String origCollection,
+        ModifiableSolrParams origParams,
+        OutputStreamContentProvider outProvider,
+        InputStreamResponseListener responseListener,
+        boolean isXml) {
       this.origCollection = origCollection;
       this.origParams = origParams;
       this.outProvider = outProvider;
@@ -286,7 +337,8 @@ public class Http2SolrClient extends SolrClient {
 
     boolean belongToThisStream(SolrRequest<?> solrRequest, String collection) {
       ModifiableSolrParams solrParams = new ModifiableSolrParams(solrRequest.getParams());
-      if (!origParams.toNamedList().equals(solrParams.toNamedList()) || !StringUtils.equals(origCollection, collection)) {
+      if (!origParams.toNamedList().equals(solrParams.toNamedList())
+          || !StringUtils.equals(origCollection, collection)) {
         return false;
       }
       return true;
@@ -308,15 +360,14 @@ public class Http2SolrClient extends SolrClient {
       this.outProvider.getOutputStream().close();
     }
 
-    //TODO this class should be hidden
+    // TODO this class should be hidden
     public InputStreamResponseListener getResponseListener() {
       return responseListener;
     }
   }
 
-  public OutStream initOutStream(String baseUrl,
-                                 UpdateRequest updateRequest,
-                                 String collection) throws IOException {
+  public OutStream initOutStream(String baseUrl, UpdateRequest updateRequest, String collection)
+      throws IOException {
     String contentType = requestWriter.getUpdateContentType();
     final ModifiableSolrParams origParams = new ModifiableSolrParams(updateRequest.getParams());
 
@@ -327,25 +378,22 @@ public class Http2SolrClient extends SolrClient {
     requestParams.set(CommonParams.VERSION, parser.getVersion());
 
     String basePath = baseUrl;
-    if (collection != null)
-      basePath += "/" + collection;
-    if (!basePath.endsWith("/"))
-      basePath += "/";
+    if (collection != null) basePath += "/" + collection;
+    if (!basePath.endsWith("/")) basePath += "/";
 
     OutputStreamContentProvider provider = new OutputStreamContentProvider();
-    Request postRequest = httpClient
-        .newRequest(basePath + "update"
-            + requestParams.toQueryString())
-        .method(HttpMethod.POST)
-        .header(HttpHeader.CONTENT_TYPE, contentType)
-        .content(provider);
+    Request postRequest =
+        httpClient
+            .newRequest(basePath + "update" + requestParams.toQueryString())
+            .method(HttpMethod.POST)
+            .header(HttpHeader.CONTENT_TYPE, contentType)
+            .content(provider);
     decorateRequest(postRequest, updateRequest);
     InputStreamResponseListener responseListener = new InputStreamResponseListener();
     postRequest.send(responseListener);
 
     boolean isXml = ClientUtils.TEXT_XML.equals(requestWriter.getUpdateContentType());
-    OutStream outStream = new OutStream(collection, origParams, provider, responseListener,
-        isXml);
+    OutStream outStream = new OutStream(collection, origParams, provider, responseListener, isXml);
     if (isXml) {
       outStream.write("<stream>".getBytes(FALLBACK_CHARSET));
     }
@@ -366,10 +414,10 @@ public class Http2SolrClient extends SolrClient {
           fmt = "<commit waitSearcher=\"%s\" />";
         }
         if (fmt != null) {
-          byte[] content = String.format(Locale.ROOT,
-              fmt, params.getBool(UpdateParams.WAIT_SEARCHER, false)
-                  + "")
-              .getBytes(FALLBACK_CHARSET);
+          byte[] content =
+              String.format(
+                      Locale.ROOT, fmt, params.getBool(UpdateParams.WAIT_SEARCHER, false) + "")
+                  .getBytes(FALLBACK_CHARSET);
           outStream.write(content);
         }
       }
@@ -377,10 +425,15 @@ public class Http2SolrClient extends SolrClient {
     outStream.flush();
   }
 
+  @SuppressWarnings("StaticAssignmentOfThrowable")
   private static final Exception CANCELLED_EXCEPTION = new Exception();
+
   private static final Cancellable FAILED_MAKING_REQUEST_CANCELLABLE = () -> {};
 
-  public Cancellable asyncRequest(SolrRequest<?> solrRequest, String collection, AsyncListener<NamedList<Object>> asyncListener) {
+  public Cancellable asyncRequest(
+      SolrRequest<?> solrRequest,
+      String collection,
+      AsyncListener<NamedList<Object>> asyncListener) {
     Request req;
     try {
       req = makeRequest(solrRequest, collection);
@@ -388,64 +441,70 @@ public class Http2SolrClient extends SolrClient {
       asyncListener.onFailure(e);
       return FAILED_MAKING_REQUEST_CANCELLABLE;
     }
-    final ResponseParser parser = solrRequest.getResponseParser() == null
-        ? this.parser: solrRequest.getResponseParser();
+    final ResponseParser parser =
+        solrRequest.getResponseParser() == null ? this.parser : solrRequest.getResponseParser();
     req.onRequestQueued(asyncTracker.queuedListener)
         .onComplete(asyncTracker.completeListener)
-        .send(new InputStreamResponseListener() {
-          @Override
-          public void onHeaders(Response response) {
-            super.onHeaders(response);
-            InputStreamResponseListener listener = this;
-            executor.execute(() -> {
-              InputStream is = listener.getInputStream();
-              assert ObjectReleaseTracker.track(is);
-              try {
-                NamedList<Object> body = processErrorsAndResponse(solrRequest, parser, response, is);
-                asyncListener.onSuccess(body);
-              } catch (RemoteSolrException e) {
-                if (SolrException.getRootCause(e) != CANCELLED_EXCEPTION) {
-                  asyncListener.onFailure(e);
+        .send(
+            new InputStreamResponseListener() {
+              @Override
+              public void onHeaders(Response response) {
+                super.onHeaders(response);
+                InputStreamResponseListener listener = this;
+                executor.execute(
+                    () -> {
+                      InputStream is = listener.getInputStream();
+                      assert ObjectReleaseTracker.track(is);
+                      try {
+                        NamedList<Object> body =
+                            processErrorsAndResponse(solrRequest, parser, response, is);
+                        asyncListener.onSuccess(body);
+                      } catch (RemoteSolrException e) {
+                        if (SolrException.getRootCause(e) != CANCELLED_EXCEPTION) {
+                          asyncListener.onFailure(e);
+                        }
+                      } catch (SolrServerException e) {
+                        asyncListener.onFailure(e);
+                      }
+                    });
+              }
+
+              @Override
+              public void onFailure(Response response, Throwable failure) {
+                super.onFailure(response, failure);
+                if (failure != CANCELLED_EXCEPTION) {
+                  asyncListener.onFailure(new SolrServerException(failure.getMessage(), failure));
                 }
-              } catch (SolrServerException e) {
-                asyncListener.onFailure(e);
               }
             });
-          }
-
-          @Override
-          public void onFailure(Response response, Throwable failure) {
-            super.onFailure(response, failure);
-            if (failure != CANCELLED_EXCEPTION) {
-              asyncListener.onFailure(new SolrServerException(failure.getMessage(), failure));
-            }
-          }
-        });
     return () -> req.abort(CANCELLED_EXCEPTION);
   }
 
   @Override
-  public NamedList<Object> request(SolrRequest<?> solrRequest, String collection) throws SolrServerException, IOException {
+  public NamedList<Object> request(SolrRequest<?> solrRequest, String collection)
+      throws SolrServerException, IOException {
     Request req = makeRequest(solrRequest, collection);
-    final ResponseParser parser = solrRequest.getResponseParser() == null
-        ? this.parser: solrRequest.getResponseParser();
+    final ResponseParser parser =
+        solrRequest.getResponseParser() == null ? this.parser : solrRequest.getResponseParser();
 
+    Throwable abortCause = null;
     try {
       InputStreamResponseListener listener = new InputStreamResponseListener();
       req.send(listener);
       Response response = listener.get(idleTimeout, TimeUnit.MILLISECONDS);
       InputStream is = listener.getInputStream();
       assert ObjectReleaseTracker.track(is);
-
       return processErrorsAndResponse(solrRequest, parser, response, is);
     } catch (InterruptedException e) {
       Thread.currentThread().interrupt();
+      abortCause = e;
       throw new RuntimeException(e);
     } catch (TimeoutException e) {
       throw new SolrServerException(
-          "Timeout occured while waiting response from server at: " + req.getURI(), e);
+          "Timeout occurred while waiting response from server at: " + req.getURI(), e);
     } catch (ExecutionException e) {
       Throwable cause = e.getCause();
+      abortCause = cause;
       if (cause instanceof ConnectException) {
         throw new SolrServerException("Server refused connection at: " + req.getURI(), cause);
       }
@@ -453,32 +512,38 @@ public class Http2SolrClient extends SolrClient {
         throw (SolrServerException) cause;
       } else if (cause instanceof IOException) {
         throw new SolrServerException(
-            "IOException occured when talking to server at: " + getBaseURL(), cause);
+            "IOException occurred when talking to server at: " + getBaseURL(), cause);
       }
       throw new SolrServerException(cause.getMessage(), cause);
+    } catch (SolrServerException | RuntimeException sse) {
+      abortCause = sse;
+      throw sse;
+    } finally {
+      if (abortCause != null) {
+        req.abort(abortCause);
+      }
     }
   }
 
-  private NamedList<Object> processErrorsAndResponse(SolrRequest<?> solrRequest,
-                                                     ResponseParser parser, Response response, InputStream is) throws SolrServerException {
-    ContentType contentType = getContentType(response);
+  private NamedList<Object> processErrorsAndResponse(
+      SolrRequest<?> solrRequest, ResponseParser parser, Response response, InputStream is)
+      throws SolrServerException {
+    String contentType = response.getHeaders().get(HttpHeader.CONTENT_TYPE);
     String mimeType = null;
     String encoding = null;
     if (contentType != null) {
-      mimeType = contentType.getMimeType();
-      encoding = contentType.getCharset() != null? contentType.getCharset().name() : null;
+      mimeType = MimeTypes.getContentTypeWithoutCharset(contentType);
+      encoding = MimeTypes.getCharsetFromContentType(contentType);
     }
-    return processErrorsAndResponse(response, parser, is, mimeType, encoding, isV2ApiRequest(solrRequest));
-  }
-
-  private ContentType getContentType(Response response) {
-    String contentType = response.getHeaders().get(HttpHeader.CONTENT_TYPE);
-    return StringUtils.isEmpty(contentType)? null : ContentType.parse(contentType);
+    return processErrorsAndResponse(
+        response, parser, is, mimeType, encoding, isV2ApiRequest(solrRequest));
   }
 
   private void setBasicAuthHeader(SolrRequest<?> solrRequest, Request req) {
     if (solrRequest.getBasicAuthUser() != null && solrRequest.getBasicAuthPassword() != null) {
-      String encoded = basicAuthCredentialsToAuthorizationString(solrRequest.getBasicAuthUser(), solrRequest.getBasicAuthPassword());
+      String encoded =
+          basicAuthCredentialsToAuthorizationString(
+              solrRequest.getBasicAuthUser(), solrRequest.getBasicAuthPassword());
       req.header("Authorization", encoded);
     } else if (basicAuthAuthorizationStr != null) {
       req.header("Authorization", basicAuthAuthorizationStr);
@@ -499,7 +564,11 @@ public class Http2SolrClient extends SolrClient {
 
   private void decorateRequest(Request req, SolrRequest<?> solrRequest) {
     req.header(HttpHeader.ACCEPT_ENCODING, null);
-    req.timeout(idleTimeout, TimeUnit.MILLISECONDS);
+    if (requestTimeout > 0) {
+      req.timeout(requestTimeout, TimeUnit.MILLISECONDS);
+    } else {
+      req.timeout(idleTimeout, TimeUnit.MILLISECONDS);
+    }
     if (solrRequest.getUserPrincipal() != null) {
       req.attribute(REQ_PRINCIPAL_KEY, solrRequest.getUserPrincipal());
     }
@@ -519,14 +588,15 @@ public class Http2SolrClient extends SolrClient {
       }
     }
   }
-  
+
   private String changeV2RequestEndpoint(String basePath) throws MalformedURLException {
     URL oldURL = new URL(basePath);
     String newPath = oldURL.getPath().replaceFirst("/solr", "/api");
     return new URL(oldURL.getProtocol(), oldURL.getHost(), oldURL.getPort(), newPath).toString();
   }
 
-  private Request createRequest(SolrRequest<?> solrRequest, String collection) throws IOException, SolrServerException {
+  private Request createRequest(SolrRequest<?> solrRequest, String collection)
+      throws IOException, SolrServerException {
     if (solrRequest.getBasePath() == null && serverBaseUrl == null)
       throw new IllegalArgumentException("Destination node is not provided!");
 
@@ -535,7 +605,8 @@ public class Http2SolrClient extends SolrClient {
     }
     SolrParams params = solrRequest.getParams();
     RequestWriter.ContentWriter contentWriter = requestWriter.getContentWriter(solrRequest);
-    Collection<ContentStream> streams = contentWriter == null ? requestWriter.getContentStreams(solrRequest) : null;
+    Collection<ContentStream> streams =
+        contentWriter == null ? requestWriter.getContentStreams(solrRequest) : null;
     String path = requestWriter.getPath(solrRequest);
     if (path == null || !path.startsWith("/")) {
       path = DEFAULT_PATH;
@@ -554,11 +625,10 @@ public class Http2SolrClient extends SolrClient {
       wparams.set(CommonParams.VERSION, parser.getVersion());
     }
 
-    //TODO add invariantParams support
+    // TODO add invariantParams support
 
     String basePath = solrRequest.getBasePath() == null ? serverBaseUrl : solrRequest.getBasePath();
-    if (collection != null)
-      basePath += "/" + collection;
+    if (collection != null) basePath += "/" + collection;
 
     if (solrRequest instanceof V2Request) {
       if (System.getProperty("solr.v2RealPath") == null) {
@@ -573,14 +643,19 @@ public class Http2SolrClient extends SolrClient {
         throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "GET can't send streams!");
       }
 
-      return httpClient.newRequest(basePath + path + wparams.toQueryString()).method(HttpMethod.GET);
+      return httpClient
+          .newRequest(basePath + path + wparams.toQueryString())
+          .method(HttpMethod.GET);
     }
 
     if (SolrRequest.METHOD.DELETE == solrRequest.getMethod()) {
-      return httpClient.newRequest(basePath + path + wparams.toQueryString()).method(HttpMethod.DELETE);
+      return httpClient
+          .newRequest(basePath + path + wparams.toQueryString())
+          .method(HttpMethod.DELETE);
     }
 
-    if (SolrRequest.METHOD.POST == solrRequest.getMethod() || SolrRequest.METHOD.PUT == solrRequest.getMethod()) {
+    if (SolrRequest.METHOD.POST == solrRequest.getMethod()
+        || SolrRequest.METHOD.PUT == solrRequest.getMethod()) {
 
       String url = basePath + path;
       boolean hasNullStreamName = false;
@@ -590,24 +665,24 @@ public class Http2SolrClient extends SolrClient {
 
       boolean isMultipart = streams != null && streams.size() > 1 && !hasNullStreamName;
 
-      HttpMethod method = SolrRequest.METHOD.POST == solrRequest.getMethod() ? HttpMethod.POST : HttpMethod.PUT;
+      HttpMethod method =
+          SolrRequest.METHOD.POST == solrRequest.getMethod() ? HttpMethod.POST : HttpMethod.PUT;
 
       if (contentWriter != null) {
-        Request req = httpClient
-            .newRequest(url + wparams.toQueryString())
-            .method(method);
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        Request req = httpClient.newRequest(url + wparams.toQueryString()).method(method);
+        BinaryRequestWriter.BAOS baos = new BinaryRequestWriter.BAOS();
         contentWriter.write(baos);
 
-        //TODO reduce memory usage
-        return req.content(new BytesContentProvider(contentWriter.getContentType(), baos.toByteArray()));
+        // SOLR-16265: TODO reduce memory usage
+        return req.content(
+            // We're throwing this BAOS away, so no need to copy the byte[], just use the raw buf
+            new ByteBufferContentProvider(
+                contentWriter.getContentType(), ByteBuffer.wrap(baos.getbuf(), 0, baos.size())));
       } else if (streams == null || isMultipart) {
         // send server list and request list as query string params
-        ModifiableSolrParams queryParams = calculateQueryParams(this.queryParams, wparams);
+        ModifiableSolrParams queryParams = calculateQueryParams(this.urlParamNames, wparams);
         queryParams.add(calculateQueryParams(solrRequest.getQueryParams(), wparams));
-        Request req = httpClient
-            .newRequest(url + queryParams.toQueryString())
-            .method(method);
+        Request req = httpClient.newRequest(url + queryParams.toQueryString()).method(method);
         return fillContentStream(req, streams, wparams, isMultipart);
       } else {
         // It is has one stream, it is the post body, put the params in the URL
@@ -615,16 +690,21 @@ public class Http2SolrClient extends SolrClient {
         return httpClient
             .newRequest(url + wparams.toQueryString())
             .method(method)
-            .content(new InputStreamContentProvider(contentStream.getStream()), contentStream.getContentType());
+            .content(
+                new InputStreamContentProvider(contentStream.getStream()),
+                contentStream.getContentType());
       }
     }
 
     throw new SolrServerException("Unsupported method: " + solrRequest.getMethod());
   }
 
-  private Request fillContentStream(Request req, Collection<ContentStream> streams,
-                                    ModifiableSolrParams wparams,
-                                    boolean isMultipart) throws IOException {
+  private Request fillContentStream(
+      Request req,
+      Collection<ContentStream> streams,
+      ModifiableSolrParams wparams,
+      boolean isMultipart)
+      throws IOException {
     if (isMultipart) {
       // multipart/form-data
       MultiPartContentProvider content = new MultiPartContentProvider();
@@ -642,15 +722,19 @@ public class Http2SolrClient extends SolrClient {
         for (ContentStream contentStream : streams) {
           String contentType = contentStream.getContentType();
           if (contentType == null) {
-            contentType = BinaryResponseParser.BINARY_CONTENT_TYPE; // default
+            contentType = "multipart/form-data"; // default
           }
           String name = contentStream.getName();
           if (name == null) {
             name = "";
           }
-          HttpFields fields = new HttpFields();
+          HttpFields.Mutable fields = HttpFields.build(1);
           fields.add(HttpHeader.CONTENT_TYPE, contentType);
-          content.addFilePart(name, contentStream.getName(), new InputStreamContentProvider(contentStream.getStream()), fields);
+          content.addFilePart(
+              name,
+              contentStream.getName(),
+              new InputStreamContentProvider(contentStream.getStream()),
+              fields);
         }
       }
       req.content(content);
@@ -678,12 +762,13 @@ public class Http2SolrClient extends SolrClient {
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
-  private NamedList<Object> processErrorsAndResponse(Response response,
-                                                     final ResponseParser processor,
-                                                     InputStream is,
-                                                     String mimeType,
-                                                     String encoding,
-                                                     final boolean isV2Api)
+  private NamedList<Object> processErrorsAndResponse(
+      Response response,
+      final ResponseParser processor,
+      InputStream is,
+      String mimeType,
+      String encoding,
+      final boolean isV2Api)
       throws SolrServerException {
     boolean shouldClose = true;
     try {
@@ -691,21 +776,23 @@ public class Http2SolrClient extends SolrClient {
       int httpStatus = response.getStatus();
 
       switch (httpStatus) {
-        case HttpStatus.SC_OK:
-        case HttpStatus.SC_BAD_REQUEST:
-        case HttpStatus.SC_CONFLICT: // 409
+        case HttpStatus.OK_200:
+        case HttpStatus.BAD_REQUEST_400:
+        case HttpStatus.CONFLICT_409:
           break;
-        case HttpStatus.SC_MOVED_PERMANENTLY:
-        case HttpStatus.SC_MOVED_TEMPORARILY:
+        case HttpStatus.MOVED_PERMANENTLY_301:
+        case HttpStatus.MOVED_TEMPORARILY_302:
           if (!httpClient.isFollowRedirects()) {
-            throw new SolrServerException("Server at " + getBaseURL()
-                + " sent back a redirect (" + httpStatus + ").");
+            throw new SolrServerException(
+                "Server at " + getBaseURL() + " sent back a redirect (" + httpStatus + ").");
           }
           break;
         default:
           if (processor == null || mimeType == null) {
-            throw new RemoteSolrException(serverBaseUrl, httpStatus, "non ok status: " + httpStatus
-                + ", message:" + response.getReason(),
+            throw new RemoteSolrException(
+                serverBaseUrl,
+                httpStatus,
+                "non ok status: " + httpStatus + ", message:" + response.getReason(),
                 null);
           }
       }
@@ -719,19 +806,29 @@ public class Http2SolrClient extends SolrClient {
         return rsp;
       }
 
-      String procCt = processor.getContentType();
-      if (procCt != null) {
-        String procMimeType = ContentType.parse(procCt).getMimeType().trim().toLowerCase(Locale.ROOT);
-        if (!procMimeType.equals(mimeType)) {
+      final Collection<String> processorSupportedContentTypes = processor.getContentTypes();
+      if (processorSupportedContentTypes != null && !processorSupportedContentTypes.isEmpty()) {
+        final Collection<String> processorMimeTypes =
+            processorSupportedContentTypes.stream()
+                .map(ct -> ContentType.parse(ct).getMimeType().trim().toLowerCase(Locale.ROOT))
+                .collect(Collectors.toSet());
+        if (!processorMimeTypes.contains(mimeType)) {
           // unexpected mime type
-          String prefix = "Expected mime type " + procMimeType + " but got " + mimeType + ". ";
-          String exceptionEncoding = encoding != null? encoding : FALLBACK_CHARSET.name();
+          final String allSupportedTypes = String.join(", ", processorMimeTypes);
+          String prefix =
+              "Expected mime type in [" + allSupportedTypes + "] but got " + mimeType + ". ";
+          String exceptionEncoding = encoding != null ? encoding : FALLBACK_CHARSET.name();
           try {
             ByteArrayOutputStream body = new ByteArrayOutputStream();
             is.transferTo(body);
-            throw new RemoteSolrException(serverBaseUrl, httpStatus, prefix + body.toString(exceptionEncoding), null);
+            throw new RemoteSolrException(
+                serverBaseUrl, httpStatus, prefix + body.toString(exceptionEncoding), null);
           } catch (IOException e) {
-            throw new RemoteSolrException(serverBaseUrl, httpStatus, "Could not parse response with encoding " + exceptionEncoding, e);
+            throw new RemoteSolrException(
+                serverBaseUrl,
+                httpStatus,
+                "Could not parse response with encoding " + exceptionEncoding,
+                e);
           }
         }
       }
@@ -744,33 +841,39 @@ public class Http2SolrClient extends SolrClient {
       }
 
       Object error = rsp == null ? null : rsp.get("error");
-      if (error != null && (String.valueOf(getObjectByPath(error, true, errPath)).endsWith("ExceptionWithErrObject"))) {
+      if (error != null
+          && (String.valueOf(getObjectByPath(error, true, errPath))
+              .endsWith("ExceptionWithErrObject"))) {
         throw RemoteExecutionException.create(serverBaseUrl, rsp);
       }
-      if (httpStatus != HttpStatus.SC_OK && !isV2Api) {
+      if (httpStatus != HttpStatus.OK_200 && !isV2Api) {
         NamedList<String> metadata = null;
         String reason = null;
         try {
           if (error != null) {
             reason = (String) Utils.getObjectByPath(error, false, Collections.singletonList("msg"));
-            if(reason == null) {
-              reason = (String) Utils.getObjectByPath(error, false, Collections.singletonList("trace"));
+            if (reason == null) {
+              reason =
+                  (String) Utils.getObjectByPath(error, false, Collections.singletonList("trace"));
             }
-            Object metadataObj = Utils.getObjectByPath(error, false, Collections.singletonList("metadata"));
-            if  (metadataObj instanceof NamedList) {
+            Object metadataObj =
+                Utils.getObjectByPath(error, false, Collections.singletonList("metadata"));
+            if (metadataObj instanceof NamedList) {
               metadata = (NamedList<String>) metadataObj;
             } else if (metadataObj instanceof List) {
               // NamedList parsed as List convert to NamedList again
               List<Object> list = (List<Object>) metadataObj;
-              metadata = new NamedList<>(list.size()/2);
-              for (int i = 0; i < list.size(); i+=2) {
-                metadata.add((String)list.get(i), (String) list.get(i+1));
+              metadata = new NamedList<>(list.size() / 2);
+              for (int i = 0; i < list.size(); i += 2) {
+                metadata.add((String) list.get(i), (String) list.get(i + 1));
               }
             } else if (metadataObj instanceof Map) {
               metadata = new NamedList((Map) metadataObj);
             }
           }
-        } catch (Exception ex) {}
+        } catch (Exception ex) {
+          /* Ignored */
+        }
         if (reason == null) {
           StringBuilder msg = new StringBuilder();
           msg.append(response.getReason())
@@ -796,10 +899,34 @@ public class Http2SolrClient extends SolrClient {
     }
   }
 
+  /**
+   * Choose the {@link RequestWriter} to use.
+   *
+   * <p>By default, {@link BinaryRequestWriter} is used.
+   *
+   * <p>Note: This setter method is <b>not thread-safe</b>.
+   *
+   * @deprecated use {@link Http2SolrClient.Builder#withRequestWriter(RequestWriter)} instead
+   */
+  @Deprecated
   public void setRequestWriter(RequestWriter requestWriter) {
     this.requestWriter = requestWriter;
   }
 
+  protected RequestWriter getRequestWriter() {
+    return requestWriter;
+  }
+
+  /**
+   * Configure whether the client should follow redirects or not.
+   *
+   * <p>This defaults to false under the assumption that if you are following a redirect to get to a
+   * Solr installation, something is configured wrong somewhere.
+   *
+   * @deprecated use {@link Http2SolrClient.Builder#withFollowRedirects(boolean)}
+   *     Redirects(boolean)} instead
+   */
+  @Deprecated
   public void setFollowRedirects(boolean follow) {
     httpClient.setFollowRedirects(follow);
   }
@@ -822,18 +949,20 @@ public class Http2SolrClient extends SolrClient {
       // TODO: what about shared instances?
       phaser = new Phaser(1);
       available = new Semaphore(MAX_OUTSTANDING_REQUESTS, false);
-      queuedListener = request -> {
-        phaser.register();
-        try {
-          available.acquire();
-        } catch (InterruptedException ignored) {
+      queuedListener =
+          request -> {
+            phaser.register();
+            try {
+              available.acquire();
+            } catch (InterruptedException ignored) {
 
-        }
-      };
-      completeListener = result -> {
-        phaser.arriveAndDeregister();
-        available.release();
-      };
+            }
+          };
+      completeListener =
+          result -> {
+            phaser.arriveAndDeregister();
+            available.release();
+          };
     }
 
     int getMaxRequestsQueuedPerDestination() {
@@ -853,16 +982,19 @@ public class Http2SolrClient extends SolrClient {
     private SSLConfig sslConfig = defaultSSLConfig;
     private Integer idleTimeout;
     private Integer connectionTimeout;
+    private Integer requestTimeout;
     private Integer maxConnectionsPerHost;
     private String basicAuthUser;
     private String basicAuthPassword;
     private boolean useHttp1_1 = Boolean.getBoolean("solr.http1");
+    private boolean followRedirects = false;
     protected String baseSolrUrl;
     private ExecutorService executor;
+    protected RequestWriter requestWriter;
+    protected ResponseParser responseParser;
+    private Set<String> urlParamNames = Set.of();
 
-    public Builder() {
-
-    }
+    public Builder() {}
 
     public Builder(String baseSolrUrl) {
       this.baseSolrUrl = baseSolrUrl;
@@ -884,24 +1016,46 @@ public class Http2SolrClient extends SolrClient {
     }
 
     private void httpClientBuilderSetup(Http2SolrClient client) {
-      String factoryClassName = System.getProperty(HttpClientUtil.SYS_PROP_HTTP_CLIENT_BUILDER_FACTORY);
+      String factoryClassName =
+          System.getProperty(HttpClientUtil.SYS_PROP_HTTP_CLIENT_BUILDER_FACTORY);
       if (factoryClassName != null) {
-        log.debug ("Using Http Builder Factory: {}", factoryClassName);
+        log.debug("Using Http Builder Factory: {}", factoryClassName);
         HttpClientBuilderFactory factory;
         try {
-          factory = (HttpClientBuilderFactory)Class.forName(factoryClassName).getConstructor().newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | InvocationTargetException | NoSuchMethodException e) {
+          factory =
+              (HttpClientBuilderFactory)
+                  Class.forName(factoryClassName).getConstructor().newInstance();
+        } catch (InstantiationException
+            | IllegalAccessException
+            | ClassNotFoundException
+            | InvocationTargetException
+            | NoSuchMethodException e) {
           throw new RuntimeException("Unable to instantiate " + Http2SolrClient.class.getName(), e);
         }
         factory.setup(client);
       }
     }
 
-    /**
-     * Reuse {@code httpClient} connections pool
-     */
+    /** Reuse {@code httpClient} connections pool */
     public Builder withHttpClient(Http2SolrClient httpClient) {
       this.http2SolrClient = httpClient;
+      return this;
+    }
+
+    /** Provides a {@link RequestWriter} for created clients to use when handing requests. */
+    public Builder withRequestWriter(RequestWriter requestWriter) {
+      this.requestWriter = requestWriter;
+      return this;
+    }
+
+    /** Provides a {@link ResponseParser} for created clients to use when handling requests. */
+    public Builder withResponseParser(ResponseParser responseParser) {
+      this.responseParser = responseParser;
+      return this;
+    }
+
+    public Builder withFollowRedirects(boolean followRedirects) {
+      this.followRedirects = followRedirects;
       return this;
     }
 
@@ -918,7 +1072,8 @@ public class Http2SolrClient extends SolrClient {
     public Builder withBasicAuthCredentials(String user, String pass) {
       if (user != null || pass != null) {
         if (user == null || pass == null) {
-          throw new IllegalStateException("Invalid Authentication credentials. Either both username and password or none must be provided");
+          throw new IllegalStateException(
+              "Invalid Authentication credentials. Either both username and password or none must be provided");
         }
       }
       this.basicAuthUser = user;
@@ -927,7 +1082,21 @@ public class Http2SolrClient extends SolrClient {
     }
 
     /**
-     * Set maxConnectionsPerHost for http1 connections, maximum number http2 connections is limited by 4
+     * Expert Method
+     *
+     * @param urlParamNames set of param keys that are only sent via the query string. Note that the
+     *     param will be sent as a query string if the key is part of this Set or the SolrRequest's
+     *     query params.
+     * @see org.apache.solr.client.solrj.SolrRequest#getQueryParams
+     */
+    public Builder withTheseParamNamesInTheUrl(Set<String> urlParamNames) {
+      this.urlParamNames = urlParamNames;
+      return this;
+    }
+
+    /**
+     * Set maxConnectionsPerHost for http1 connections, maximum number http2 connections is limited
+     * by 4
      */
     public Builder maxConnectionsPerHost(int max) {
       this.maxConnectionsPerHost = max;
@@ -944,30 +1113,51 @@ public class Http2SolrClient extends SolrClient {
       return this;
     }
 
-    public Builder connectionTimeout(int connectionTimeOut) {
-      this.connectionTimeout = connectionTimeOut;
+    public Builder connectionTimeout(int connectionTimeout) {
+      this.connectionTimeout = connectionTimeout;
+      return this;
+    }
+
+    /**
+     * Set a timeout in milliseconds for requests issued by this client.
+     *
+     * @param requestTimeout The timeout in milliseconds
+     * @return this Builder.
+     */
+    public Builder requestTimeout(int requestTimeout) {
+      this.requestTimeout = requestTimeout;
       return this;
     }
   }
 
+  /**
+   * @deprecated use {@link #getUrlParamNames()}
+   */
+  @Deprecated
   public Set<String> getQueryParams() {
-    return queryParams;
+    return getUrlParamNames();
+  }
+
+  public Set<String> getUrlParamNames() {
+    return urlParamNames;
   }
 
   /**
    * Expert Method
    *
-   * @param queryParams set of param keys to only send via the query string
-   *                    Note that the param will be sent as a query string if the key is part
-   *                    of this Set or the SolrRequest's query params.
+   * @param urlParamNames set of param keys that are only sent via the query string. Note that the
+   *     param will be sent as a query string if the key is part of this Set or the SolrRequest's
+   *     query params.
    * @see org.apache.solr.client.solrj.SolrRequest#getQueryParams
+   * @deprecated use {@link Http2SolrClient.Builder#withTheseParamNamesInTheUrl(Set)} instead
    */
-  public void setQueryParams(Set<String> queryParams) {
-    this.queryParams = queryParams;
+  @Deprecated
+  public void setUrlParamNames(Set<String> urlParamNames) {
+    this.urlParamNames = urlParamNames;
   }
 
-  private ModifiableSolrParams calculateQueryParams(Set<String> queryParamNames,
-                                                    ModifiableSolrParams wparams) {
+  private ModifiableSolrParams calculateQueryParams(
+      Set<String> queryParamNames, ModifiableSolrParams wparams) {
     ModifiableSolrParams queryModParams = new ModifiableSolrParams();
     if (queryParamNames != null) {
       for (String param : queryParamNames) {
@@ -987,8 +1177,17 @@ public class Http2SolrClient extends SolrClient {
     return parser;
   }
 
-  public void setParser(ResponseParser processor) {
-    parser = processor;
+  /**
+   * Note: This setter method is <b>not thread-safe</b>.
+   *
+   * @param parser Default Response Parser chosen to parse the response if the parser were not
+   *     specified as part of the request.
+   * @see org.apache.solr.client.solrj.SolrRequest#getResponseParser()
+   * @deprecated use {@link Http2SolrClient.Builder#withResponseParser(ResponseParser)} instead
+   */
+  @Deprecated
+  public void setParser(ResponseParser parser) {
+    this.parser = parser;
   }
 
   public static void setDefaultSSLConfig(SSLConfig sslConfig) {
@@ -1011,31 +1210,27 @@ public class Http2SolrClient extends SolrClient {
     SslContextFactory.Client sslContextFactory = new SslContextFactory.Client(!sslCheckPeerName);
 
     if (null != System.getProperty("javax.net.ssl.keyStore")) {
-      sslContextFactory.setKeyStorePath
-          (System.getProperty("javax.net.ssl.keyStore"));
+      sslContextFactory.setKeyStorePath(System.getProperty("javax.net.ssl.keyStore"));
     }
     if (null != System.getProperty("javax.net.ssl.keyStorePassword")) {
-      sslContextFactory.setKeyStorePassword
-          (System.getProperty("javax.net.ssl.keyStorePassword"));
+      sslContextFactory.setKeyStorePassword(System.getProperty("javax.net.ssl.keyStorePassword"));
     }
     if (null != System.getProperty("javax.net.ssl.keyStoreType")) {
-      sslContextFactory.setKeyStoreType
-              (System.getProperty("javax.net.ssl.keyStoreType"));
+      sslContextFactory.setKeyStoreType(System.getProperty("javax.net.ssl.keyStoreType"));
     }
     if (null != System.getProperty("javax.net.ssl.trustStore")) {
-      sslContextFactory.setTrustStorePath
-          (System.getProperty("javax.net.ssl.trustStore"));
+      sslContextFactory.setTrustStorePath(System.getProperty("javax.net.ssl.trustStore"));
     }
     if (null != System.getProperty("javax.net.ssl.trustStorePassword")) {
-      sslContextFactory.setTrustStorePassword
-          (System.getProperty("javax.net.ssl.trustStorePassword"));
+      sslContextFactory.setTrustStorePassword(
+          System.getProperty("javax.net.ssl.trustStorePassword"));
     }
     if (null != System.getProperty("javax.net.ssl.trustStoreType")) {
-      sslContextFactory.setTrustStoreType
-              (System.getProperty("javax.net.ssl.trustStoreType"));
+      sslContextFactory.setTrustStoreType(System.getProperty("javax.net.ssl.trustStoreType"));
     }
 
-    sslContextFactory.setEndpointIdentificationAlgorithm(System.getProperty("solr.jetty.ssl.verifyClientHostName"));
+    sslContextFactory.setEndpointIdentificationAlgorithm(
+        System.getProperty("solr.jetty.ssl.verifyClientHostName"));
 
     return sslContextFactory;
   }
